--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- shape card container -->
     <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Triangle -->
-        <div class="card w-auto bg-base-100 shadow-xl">
+        <div class="card w-full bg-base-100 shadow-xl">
             <figure><img src="./images/triangle.png" alt="Triangle" /></figure>
             <div class="card-body">
               <h2 class="card-title ">Triangle</h2>
@@ -39,11 +39,11 @@
             </div>
           </div>
           <!-- Rectangle -->
-          <div class="card w-auto bg-base-100 shadow-xl">
+          <div class="card w-full bg-base-100 shadow-xl">
             <figure ><img class="mt-5" src="./images/rectangle.png" alt="Rectangle" /></figure>
             <div class="card-body">
               <h2 class="card-title">Rectangle</h2>
-              <p>Area (A) = w X l</p>
+              <p class="text-center">Area (A) = w X l</p>
               <div>
                 <input id="rectangle-width" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="w">
               <span class="mr-2 ">cm</span>
@@ -58,17 +58,87 @@
               </div>
             </div>
           </div>
-        <!-- Triangle -->
-        <div class="card w-auto bg-base-100 shadow-xl">
-            <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+          <!-- Parallelogram -->
+          <div class="card w-full bg-base-100 shadow-xl">
+            <figure ><img class="mt-9" src="./images/parallelogram.png" alt="Parallelogram" /></figure>
             <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <h2 class="card-title">Parallelogram</h2>
+              <p class="text-center">Area (A) = b X h</p>
+              <div>
+                <input id="parallelogram-base" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="b">
+              <span class="mr-2 ">cm</span>
+              <input id="parallelogram-height" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="h"> 
+              <span >cm</span>
+              <div>
+                <p class="text-2xl">Area: <span id="parallelogram"></span> <span>cm<sup>2</sup></span></p>
+              </div>
+              </div>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+                <button onclick="calculateParalellogramArea()" class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
+          <!-- Rhombus -->
+          <div class="card w-full bg-base-100 shadow-xl">
+            <figure ><img class="mt-5" src="./images/rhombus.png" alt="Rhombus" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Rhombus</h2>
+              <p class="text-center">Area (A) = 0.5 X d1 X d2</p>
+              <div>
+                <input id="rhombus-first-diagonal" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="d1">
+              <span class="mr-2 ">cm</span>
+              <input id="rhombus-second-diagonal" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="d2"> 
+              <span >cm</span>
+              <div>
+                <p class="text-2xl">Area: <span id="rhombus-area"></span> <span>cm<sup>2</sup></span></p>
+              </div>
+              </div>
+              <div class="card-actions justify-end">
+                <button onclick="calculateRhombusArea()" class="btn btn-primary w-full">Calculate</button>
+              </div>
+            </div>
+          </div>
+          <!-- Pentagon -->
+          <div class="card w-full bg-base-100 shadow-xl">
+            <figure ><img class="mt-5" src="./images/pentagon.png" alt="Pentagon" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Pentagon</h2>
+              <p class="text-center">Area (A) = 0.5 X p X b</p>
+              <div>
+                <input id="pentagon-perimeter" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="p">
+              <span class="mr-2 ">cm</span>
+              <input id="pentagon-apothem" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="b"> 
+              <span >cm</span>
+              <div>
+                <p class="text-2xl">Area: <span id="pentagon-area"></span> <span>cm<sup>2</sup></span></p>
+              </div>
+              </div>
+              <div class="card-actions justify-end">
+                <button onclick="calculatePentagonArea()" class="btn btn-primary w-full">Calculate</button>
+              </div>
+            </div>
+          </div>
+          <!-- Ellipse -->
+          <div class="card w-full bg-base-100 shadow-xl">
+            <figure ><img class="mt-8" src="./images/ellipse.png" alt="Ellipse" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Ellipse</h2>
+              <p class="text-center">Area (A) = π X a X b</p>
+              <div>
+                <input id="ellipse-major-axis" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="a">
+              <span class="mr-2 ">cm</span>
+              <input id="ellipse-minor-axis" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="b"> 
+              <span >cm</span>
+              <div>
+                <p class="text-2xl">Area: <span id="ellipse-area"></span> <span>cm<sup>2</sup></span></p>
+              </div>
+              </div>
+              <div class="card-actions justify-end">
+                <button onclick="calculateEllipseArea()" class="btn btn-primary w-full">Calculate</button>
+              </div>
+            </div>
+          </div>
+       
     </div>
     <!-- area calculation container -->
     <div class="w-96 border-2 border-gray-700 rounded-md">
