--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <input id="parallelogram-height" class="w-16 text-2xl p-2 rounded-sm" type="text" placeholder="h"> 
               <span >cm</span>
               <div>
-                <p class="text-2xl">Area: <span id="parallelogram"></span> <span>cm<sup>2</sup></span></p>
+                <p class="text-2xl">Area: <span id="parallelogram-area"></span> <span>cm<sup>2</sup></span></p>
               </div>
               </div>
               <div class="card-actions justify-end">
@@ -148,6 +148,7 @@
     </main>
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-calculate.js"></script>
+    <script src="scripts/calculate-area.js"></script>
 </body>
 
 </html>
