hover effect event  added

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
     <!-- area calculation container -->
     <div class="w-96 border-2 border-gray-700 rounded-md">
         <h3 class="text-3xl text-center p-4">Area calculation</h3>
+        <div id="resultContainer" class="px-10">
+
+        </div>
     </div>
 </div>
     </main>
